# limiteron

./: .clippy.toml  .gitignore  Cargo.toml  IFLOW.md  LICENSE  README.md  README_zh.md  TEST_SUMMARY_2026_01_17.md  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/:  release.yml  code_review.yml  release.yml  tag-deleted.yml
.iflow/agents/: code-simplifier.md
.sisyphus/: ralph-loop.local.md
.trae/rules/: 00-global-config.md  01-collaboration.md  02-coding-standards.md  03-project-structure.md  04-environment.md  05-dependency.md  06-documentation.md  07-design-patterns.md  08-error-logging.md  09-performance.md  10-security.md  11-git-workflow.md
benches/: latency.rs  throughput.rs
docs/: API_REFERENCE.md  FAQ.md  USER_GUIDE.md
examples/: Cargo.toml  ban_management.rs  ban_manager.rs  circuit_breaker.rs  concurrency.rs  custom_extensions.rs  decision_chain.rs  fixed_window.rs  flow_control_macro.rs  full_flow_control.rs  geo_device_matching.rs  governor.rs  identifier.rs  macro_usage.rs  matcher.rs  quota_controller.rs  quota_management.rs  redis_usage.rs  simple_rate_limit.rs  sliding_window.rs  storage_memory.rs  storage_postgres.rs  storage_redis.rs  token_bucket.rs
macros/: Cargo.toml
macros/src/: lib.rs
openspec/: project.md
openspec/changes/add-examples-directory/: proposal.md  tasks.md
openspec/changes/add-examples-directory/specs/examples/: spec.md
openspec/changes/refactor-cache-modularization/: design.md  proposal.md  tasks.md
openspec/changes/refactor-cache-modularization/specs/cache/: spec.md
openspec/changes/refactor-code-quality-issues/: design.md  proposal.md  tasks.md
openspec/changes/refactor-code-quality-issues/specs/ban-manager/: spec.md
openspec/changes/refactor-code-quality-issues/specs/l2-cache/: spec.md
openspec/changes/refactor-features-modularization/: design.md  proposal.md  tasks.md
openspec/changes/refactor-features-modularization/specs/advanced/: spec.md
openspec/changes/refactor-features-modularization/specs/core/: spec.md
openspec/changes/refactor-features-modularization/specs/matching/: spec.md
openspec/changes/refactor-features-modularization/specs/observability/: spec.md
openspec/changes/refactor-features-modularization/specs/storage/: spec.md
openspec/changes/refactor-matchers-modularization/: design.md  proposal.md  tasks.md
openspec/changes/refactor-matchers-modularization/specs/matchers/: spec.md
openspec/changes/refactor-test-modularization/: README.md  design.md  proposal.md  tasks.md
openspec/changes/refactor-test-modularization/specs/testing/: spec.md
openspec/changes/replace-mocks-with-real-storage/: proposal.md  tasks.md
openspec/changes/replace-mocks-with-real-storage/specs/ban-manager/: spec.md
openspec/changes/replace-mocks-with-real-storage/specs/l2-cache/: spec.md
openspec/changes/replace-mocks-with-real-storage/specs/storage/: spec.md
scripts/:  pre-commit-check.sh  init-db.sql  pre-commit-check.sh  pre-commit-hook.sh  prometheus.yml  run-all-tests.sh  run-integration-tests.sh
src/: audit_log.rs  ban_manager.rs  circuit_breaker.rs  code_review.rs  config.rs  config_security.rs  config_watcher.rs  constants.rs  custom_limiter.rs  custom_matcher.rs  decision_chain.rs  device_matcher.rs  error.rs  error_abstraction.rs  fallback.rs  geo_matcher.rs  governor.rs  governor_original.rs  l2_cache.rs  l3_cache.rs  lib.rs  limiter_manager.rs  limiters.rs  log_redaction.rs  lua_scripts.rs  macros.rs  main.rs  matchers.rs  monitoring_system.rs  parallel_ban_checker.rs  postgres_storage.rs  prelude.rs  quota_controller.rs  redis_storage.rs  smart_cache.rs  storage.rs  telemetry.rs
src/cache/: l2.rs  l3.rs  mod.rs  smart.rs
src/factory/: mod.rs
src/limiters/: quota_limiter.rs
src/matchers/: custom.rs  device.rs  geo.rs  mod.rs
tests/: common_tests.rs  e2e_tests.rs  integration_tests.rs  test_summary.md
tests/benches/: latency.rs  throughput.rs
tests/common/: mod.rs
tests/e2e/: mod.rs  multi_rule_cascade.rs  quota_overdraft.rs  rate_limit_to_ban.rs
tests/fixtures/: invalid_config.yaml  valid_config.yaml
tests/integration/: mod.rs  postgres_test.rs  redis_test.rs
tests/modules/: mod.rs
tests/modules/ban_manager/: integration.rs  mod.rs
tests/modules/ban_manager/unit/: mod.rs
tests/modules/cache/: integration.rs  mod.rs
tests/modules/cache/unit/: mod.rs
tests/modules/circuit_breaker/: integration.rs  mod.rs
tests/modules/circuit_breaker/unit/: mod.rs
tests/modules/governor/: integration.rs  mod.rs
tests/modules/governor/unit/: mod.rs
tests/modules/limiters/: integration.rs  mod.rs
tests/modules/limiters/unit/: mod.rs
tests/modules/matchers/: integration.rs  mod.rs
tests/modules/matchers/unit/: mod.rs
tests/modules/quota/: integration.rs  mod.rs
tests/modules/quota/unit/: mod.rs
tests/modules/storage/: integration.rs  mod.rs
tests/modules/storage/unit/: memory.rs  mod.rs  postgres.rs  redis.rs
