[workspace]
members = [
    ".",
    "macros", "temp/test_project",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kirky.X"]
license = "Apache-2.0"
repository = "https://github.com/Kirky-X/limiteron"

[workspace.dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "net", "signal", "sync"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
tracing = "0.1"
lru = "0.12"
lazy_static = "1.4"
tracing-opentelemetry = "0.22"
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }

[package]
name = "limiteron"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified flow control framework for Rust"
keywords = ["rate-limiting", "quota", "throttling", "circuit-breaker"]
categories = ["web-programming", "concurrency"]

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml = "0.8"
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tracing.workspace = true
lru.workspace = true
lazy_static.workspace = true
regex = "1.12"
secrecy = "0.8"
futures = "0.3"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"], optional = true }
redis = { version = "0.24", features = ["tokio-comp", "cluster", "connection-manager"], optional = true }
maxminddb = { version = "0.24", optional = true }
woothee = { version = "0.13", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-jaeger = { version = "0.20", optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
notify = { version = "6.1", optional = true }
proc-macro2 = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full"], optional = true }
quote = { version = "1.0", optional = true }
flowguard-macros = { path = "macros", optional = true }
ahash = { version = "0.8.12", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# ============================================
# Feature Presets (预定义组合)
# ============================================
# Minimal: Only core rate limiting with memory storage
minimal = ["memory"]
# Standard: Core + essential advanced features for API rate limiting
standard = ["memory", "ban-manager", "quota-control", "circuit-breaker"]
# Full: All features enabled (equivalent to v0.1.0 default)
full = [
    "postgres",
    "redis",
    "ban-manager",
    "quota-control",
    "circuit-breaker",
    "geo-matching",
    "device-matching",
    "telemetry",
    "monitoring",
    "audit-log",
    "macros",
    "config-watcher",
    "webhook"
]
# Legacy: Compatibility with v0.1.0 default behavior
legacy-compat = ["postgres", "redis", "telemetry", "macros"]
default = ["memory"]

# ============================================
# Storage Features (存储后端 - 可多选)
# ============================================
# Memory storage (always available, minimal overhead)
memory = []
# PostgreSQL storage (persistent, transactional)
postgres = ["dep:sqlx"]
# Redis storage (high-performance, distributed)
redis = ["dep:redis"]

# ============================================
# Advanced Features (高级功能 - 独立)
# ============================================
# Ban management (IP/user ban with priority)
ban-manager = []
# Quota control (periodic allocation, alerting)
quota-control = []
# Circuit breaker (auto-failover, recovery)
circuit-breaker = []
# Fallback strategy (alternative actions on limit exceeded)
fallback = []

# ============================================
# Matching Features (匹配增强 - 独立)
# ============================================
# Geo-location matching (MaxMindDB)
geo-matching = ["dep:maxminddb"]
# Device fingerprinting (Woothee)
device-matching = ["dep:woothee"]

# ============================================
# Observability Features (可观测性 - 独立)
# ============================================
# Telemetry (OpenTelemetry + Jaeger tracing)
telemetry = [
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry-jaeger",
    "dep:opentelemetry_sdk"
]
# Monitoring (Prometheus metrics)
monitoring = ["dep:prometheus"]
# Audit logging (depends on telemetry)
audit-log = ["telemetry"]

# ============================================
# Tooling Features (工具 - 独立)
# ============================================
# Macro system (#[flow_control] attribute macro)
macros = ["dep:flowguard-macros", "dep:proc-macro2", "dep:syn", "dep:quote"]
# Configuration file hot reload
config-watcher = ["dep:notify"]
# Webhook notifications
webhook = ["dep:reqwest"]

[[example]]
name = "simple_rate_limit"
path = "examples/simple_rate_limit.rs"

[[example]]
name = "quota_management"
path = "examples/quota_management.rs"

[[example]]
name = "macro_usage"
path = "examples/macro_usage.rs"
