[package]
name = "limiteron-macros"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for limiteron rate limiting"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

[dev-dependencies]
limiteron = { path = ".." }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0"